[package]
name = "vaultkeeper"
version = "0.1.0"
edition = "2021"
description = "A lightweight CLI secrets manager that encrypts local env files using age encryption"
license = "MIT"

[[bin]]
name = "vaultkeeper"
path = "src/main.rs"

[dependencies]
age = { version = "0.10", features = ["cli-common"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
secrecy = "0.8"

[dev-dependencies]
tempfile = "3"
